log/build_2020-08-08_00-01-05/main/stderr.log
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:8:15: error: use of undeclared identifier 'Calc'
        float degree=Calc::degree_atan2(ball.pose,robot.pose)-robot.pose.theta;
                     ^
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/main.cpp:2:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:17:
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: error: redefinition of 'Calc'
class Calc{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.hpp:10:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:17:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: note: unguarded header; consider using #ifdef guards or #pragma once
class Calc{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:9:23: error: use of undeclared identifier 'Calc'
        float TH_goal_degree=Calc::degree_atan2(goal.their,robot.pose);
                             ^
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:6:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:17:
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: error: redefinition of 'Calc'
class Calc{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.hpp:10:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:17:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: note: unguarded header; consider using #ifdef guards or #pragma once
class Calc{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
1 error generated.
2 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/main.dir/src/goalie.cpp.o] Error 1
1 warning and 1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/game.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
